--- a/MoqConverter/MoqConverter.Core/MoqConverter.Core.csproj
+++ b/MoqConverter/MoqConverter.Core/MoqConverter.Core.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.CodeAnalysis" Version="2.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NSubstituteToMoq\Strategies\" />
+  </ItemGroup>
+
 </Project>
